generated/CodejiParser.java
// Generated from CodejiParser.g4 by ANTLR 4.13.2
package generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape" })
public class CodejiParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int PADHLE = 1, LIKHNA = 2, NAYILINE = 3, PATAHAI = 4, RAKHDO = 5, BOLNA = 6, THIKHAI = 7,
			SAHIME = 8, KUCHNAHI = 9, AGAR = 10, NAHI_AGAR = 11, NAHI_TO = 12, KHATM = 13, JABTAK = 14,
			JODWA = 15, GHATAWA = 16, GUNAK = 17, BATAAK = 18, REMAINDERWA = 19, POWERWA = 20,
			BADA = 21, CHHOTA = 22, BARABAR = 23, BADA_YA_BARAABAR = 24, CHHOTA_YA_BARAABAR = 25,
			NAHI_BARABAR = 26, LPAREN = 27, RPAREN = 28, COMMA = 29, STRING = 30, NUMBER = 31,
			ID = 32, WS = 33, LINE_COMMENT = 34, BLOCK_COMMENT = 35;
	public static final int RULE_program = 0, RULE_statement = 1, RULE_varDeclarationStatement = 2,
			RULE_assignmentStatement = 3, RULE_printStatement = 4, RULE_printLineStatement = 5,
			RULE_padhleStatement = 6, RULE_ifStatement = 7, RULE_whileStatement = 8,
			RULE_statementBlock = 9, RULE_condition = 10, RULE_comparator = 11, RULE_printArguments = 12,
			RULE_printPart = 13, RULE_printValue = 14, RULE_expression = 15, RULE_term = 16,
			RULE_factor = 17, RULE_primary = 18;

	private static String[] makeRuleNames() {
		return new String[] {
				"program", "statement", "varDeclarationStatement", "assignmentStatement",
				"printStatement", "printLineStatement", "padhleStatement", "ifStatement",
				"whileStatement", "statementBlock", "condition", "comparator", "printArguments",
				"printPart", "printValue", "expression", "term", "factor", "primary"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'padhle'", "'likhna'", "'nayiLine'", "'pataHai'", "'rakhDo'",
				"'bolna'", "'thikHai'", "'sahiMe'", "'kuchNahi'", "'agar'", "'nahi_agar'",
				"'nahi_to'", "'khatm'", "'jabtak'", "'jodwa'", "'ghatawa'", "'gunak'",
				"'bataak'", "'remainderwa'", "'powerwa'", "'bada'", "'chhota'", "'barabar'",
				"'bada_ya_barabar'", "'chhota_ya_barabar'", "'nahi_barabar'", "'('",
				"')'", "','"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, "PADHLE", "LIKHNA", "NAYILINE", "PATAHAI", "RAKHDO", "BOLNA", "THIKHAI",
				"SAHIME", "KUCHNAHI", "AGAR", "NAHI_AGAR", "NAHI_TO", "KHATM", "JABTAK",
				"JODWA", "GHATAWA", "GUNAK", "BATAAK", "REMAINDERWA", "POWERWA", "BADA",
				"CHHOTA", "BARABAR", "BADA_YA_BARAABAR", "CHHOTA_YA_BARAABAR", "NAHI_BARABAR",
				"LPAREN", "RPAREN", "COMMA", "STRING", "NUMBER", "ID", "WS", "LINE_COMMENT",
				"BLOCK_COMMENT"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "CodejiParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public CodejiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(CodejiParser.EOF, 0);
		}

		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}

		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterProgram(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitProgram(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitProgram(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4294984790L) != 0)) {
					{
						{
							setState(38);
							statement();
						}
					}
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(44);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public VarDeclarationStatementContext varDeclarationStatement() {
			return getRuleContext(VarDeclarationStatementContext.class, 0);
		}

		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class, 0);
		}

		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class, 0);
		}

		public PrintLineStatementContext printLineStatement() {
			return getRuleContext(PrintLineStatementContext.class, 0);
		}

		public PadhleStatementContext padhleStatement() {
			return getRuleContext(PadhleStatementContext.class, 0);
		}

		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class, 0);
		}

		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class, 0);
		}

		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_statement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case PATAHAI:
					enterOuterAlt(_localctx, 1); {
					setState(46);
					varDeclarationStatement();
				}
					break;
				case ID:
					enterOuterAlt(_localctx, 2); {
					setState(47);
					assignmentStatement();
				}
					break;
				case BOLNA:
					enterOuterAlt(_localctx, 3); {
					setState(48);
					printStatement();
				}
					break;
				case LIKHNA:
					enterOuterAlt(_localctx, 4); {
					setState(49);
					printLineStatement();
				}
					break;
				case PADHLE:
					enterOuterAlt(_localctx, 5); {
					setState(50);
					padhleStatement();
				}
					break;
				case AGAR:
					enterOuterAlt(_localctx, 6); {
					setState(51);
					ifStatement();
				}
					break;
				case JABTAK:
					enterOuterAlt(_localctx, 7); {
					setState(52);
					whileStatement();
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationStatementContext extends ParserRuleContext {
		public TerminalNode PATAHAI() {
			return getToken(CodejiParser.PATAHAI, 0);
		}

		public TerminalNode ID() {
			return getToken(CodejiParser.ID, 0);
		}

		public TerminalNode RAKHDO() {
			return getToken(CodejiParser.RAKHDO, 0);
		}

		public PrintValueContext printValue() {
			return getRuleContext(PrintValueContext.class, 0);
		}

		public TerminalNode THIKHAI() {
			return getToken(CodejiParser.THIKHAI, 0);
		}

		public VarDeclarationStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_varDeclarationStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterVarDeclarationStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitVarDeclarationStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitVarDeclarationStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationStatementContext varDeclarationStatement() throws RecognitionException {
		VarDeclarationStatementContext _localctx = new VarDeclarationStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclarationStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(55);
				match(PATAHAI);
				setState(56);
				match(ID);
				setState(57);
				match(RAKHDO);
				setState(58);
				printValue();
				setState(59);
				match(THIKHAI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStatementContext extends ParserRuleContext {
		public TerminalNode ID() {
			return getToken(CodejiParser.ID, 0);
		}

		public TerminalNode RAKHDO() {
			return getToken(CodejiParser.RAKHDO, 0);
		}

		public PrintValueContext printValue() {
			return getRuleContext(PrintValueContext.class, 0);
		}

		public TerminalNode THIKHAI() {
			return getToken(CodejiParser.THIKHAI, 0);
		}

		public AssignmentStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assignmentStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterAssignmentStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitAssignmentStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitAssignmentStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final AssignmentStatementContext assignmentStatement() throws RecognitionException {
		AssignmentStatementContext _localctx = new AssignmentStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignmentStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(61);
				match(ID);
				setState(62);
				match(RAKHDO);
				setState(63);
				printValue();
				setState(64);
				match(THIKHAI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintStatementContext extends ParserRuleContext {
		public TerminalNode BOLNA() {
			return getToken(CodejiParser.BOLNA, 0);
		}

		public PrintArgumentsContext printArguments() {
			return getRuleContext(PrintArgumentsContext.class, 0);
		}

		public TerminalNode THIKHAI() {
			return getToken(CodejiParser.THIKHAI, 0);
		}

		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_printStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterPrintStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitPrintStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitPrintStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(66);
				match(BOLNA);
				setState(67);
				printArguments();
				setState(68);
				match(THIKHAI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintLineStatementContext extends ParserRuleContext {
		public TerminalNode LIKHNA() {
			return getToken(CodejiParser.LIKHNA, 0);
		}

		public PrintArgumentsContext printArguments() {
			return getRuleContext(PrintArgumentsContext.class, 0);
		}

		public TerminalNode THIKHAI() {
			return getToken(CodejiParser.THIKHAI, 0);
		}

		public PrintLineStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_printLineStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterPrintLineStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitPrintLineStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitPrintLineStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final PrintLineStatementContext printLineStatement() throws RecognitionException {
		PrintLineStatementContext _localctx = new PrintLineStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_printLineStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(70);
				match(LIKHNA);
				setState(71);
				printArguments();
				setState(72);
				match(THIKHAI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PadhleStatementContext extends ParserRuleContext {
		public TerminalNode PADHLE() {
			return getToken(CodejiParser.PADHLE, 0);
		}

		public TerminalNode ID() {
			return getToken(CodejiParser.ID, 0);
		}

		public TerminalNode THIKHAI() {
			return getToken(CodejiParser.THIKHAI, 0);
		}

		public PadhleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_padhleStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterPadhleStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitPadhleStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitPadhleStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final PadhleStatementContext padhleStatement() throws RecognitionException {
		PadhleStatementContext _localctx = new PadhleStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_padhleStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(74);
				match(PADHLE);
				setState(75);
				match(ID);
				setState(76);
				match(THIKHAI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode AGAR() {
			return getToken(CodejiParser.AGAR, 0);
		}

		public List<TerminalNode> LPAREN() {
			return getTokens(CodejiParser.LPAREN);
		}

		public TerminalNode LPAREN(int i) {
			return getToken(CodejiParser.LPAREN, i);
		}

		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}

		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class, i);
		}

		public List<TerminalNode> RPAREN() {
			return getTokens(CodejiParser.RPAREN);
		}

		public TerminalNode RPAREN(int i) {
			return getToken(CodejiParser.RPAREN, i);
		}

		public List<StatementBlockContext> statementBlock() {
			return getRuleContexts(StatementBlockContext.class);
		}

		public StatementBlockContext statementBlock(int i) {
			return getRuleContext(StatementBlockContext.class, i);
		}

		public TerminalNode KHATM() {
			return getToken(CodejiParser.KHATM, 0);
		}

		public List<TerminalNode> NAHI_AGAR() {
			return getTokens(CodejiParser.NAHI_AGAR);
		}

		public TerminalNode NAHI_AGAR(int i) {
			return getToken(CodejiParser.NAHI_AGAR, i);
		}

		public TerminalNode NAHI_TO() {
			return getToken(CodejiParser.NAHI_TO, 0);
		}

		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_ifStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterIfStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitIfStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitIfStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(78);
				match(AGAR);
				setState(79);
				match(LPAREN);
				setState(80);
				condition();
				setState(81);
				match(RPAREN);
				setState(82);
				statementBlock();
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NAHI_AGAR) {
					{
						{
							setState(83);
							match(NAHI_AGAR);
							setState(84);
							match(LPAREN);
							setState(85);
							condition();
							setState(86);
							match(RPAREN);
							setState(87);
							statementBlock();
						}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == NAHI_TO) {
					{
						setState(94);
						match(NAHI_TO);
						setState(95);
						statementBlock();
					}
				}

				setState(98);
				match(KHATM);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatementContext extends ParserRuleContext {
		public TerminalNode JABTAK() {
			return getToken(CodejiParser.JABTAK, 0);
		}

		public TerminalNode LPAREN() {
			return getToken(CodejiParser.LPAREN, 0);
		}

		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class, 0);
		}

		public TerminalNode RPAREN() {
			return getToken(CodejiParser.RPAREN, 0);
		}

		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class, 0);
		}

		public TerminalNode KHATM() {
			return getToken(CodejiParser.KHATM, 0);
		}

		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_whileStatement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterWhileStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitWhileStatement(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitWhileStatement(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whileStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(100);
				match(JABTAK);
				setState(101);
				match(LPAREN);
				setState(102);
				condition();
				setState(103);
				match(RPAREN);
				setState(104);
				statementBlock();
				setState(105);
				match(KHATM);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementBlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}

		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class, i);
		}

		public StatementBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_statementBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterStatementBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitStatementBlock(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitStatementBlock(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StatementBlockContext statementBlock() throws RecognitionException {
		StatementBlockContext _localctx = new StatementBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statementBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(107);
							statement();
						}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4294984790L) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}

		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class, i);
		}

		public ComparatorContext comparator() {
			return getRuleContext(ComparatorContext.class, 0);
		}

		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_condition;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterCondition(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitCondition(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitCondition(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(112);
				expression();
				setState(113);
				comparator();
				setState(114);
				expression();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparatorContext extends ParserRuleContext {
		public TerminalNode BADA() {
			return getToken(CodejiParser.BADA, 0);
		}

		public TerminalNode CHHOTA() {
			return getToken(CodejiParser.CHHOTA, 0);
		}

		public TerminalNode BARABAR() {
			return getToken(CodejiParser.BARABAR, 0);
		}

		public TerminalNode BADA_YA_BARAABAR() {
			return getToken(CodejiParser.BADA_YA_BARAABAR, 0);
		}

		public TerminalNode CHHOTA_YA_BARAABAR() {
			return getToken(CodejiParser.CHHOTA_YA_BARAABAR, 0);
		}

		public TerminalNode NAHI_BARABAR() {
			return getToken(CodejiParser.NAHI_BARABAR, 0);
		}

		public ComparatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_comparator;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterComparator(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitComparator(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CodejiParserVisitor)
				return ((CodejiParserVisitor<? extends T>) visitor).visitComparator(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ComparatorContext comparator() throws RecognitionException {
		ComparatorContext _localctx = new ComparatorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comparator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(116);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 132120576L) != 0))) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF)
						matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintArgumentsContext extends ParserRuleContext {
		public List<PrintPartContext> printPart() {
			return getRuleContexts(PrintPartContext.class);
		}

		public PrintPartContext printPart(int i) {
			return getRuleContext(PrintPartContext.class, i);
		}

		public List<TerminalNode> COMMA() {
			return getTokens(CodejiParser.COMMA);
		}

		public TerminalNode COMMA(int i) {
			return getToken(CodejiParser.COMMA, i);
		}

		public PrintArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_printArguments;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).enterPrintArguments(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CodejiParserListener)
				((CodejiParserListener) listener).exitPrintArguments(this);
		}
